--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ width: 100%;
 
     /* Sticky Header */
     header{
-      background:var(--color-bg);
+      background:var(--color-primary);
       padding:1rem;
       display:flex;
       align-items:center;
