--- a/style.css
+++ b/style.css
@@ -107,16 +107,12 @@ height: auto;
       flex:1;padding:1rem;display:flex;flex-direction:column;gap:1rem;
       width:100%;max-width:1000px;margin:0 auto;
     }
-
+/*****IFRAME CHANNELS*****/
     .iframe-container{border: 2px solid var(--color-secondary);position:relative;width:100%;padding-top:56.25%;background:black;border-radius:12px;overflow:hidden}
     .iframe-container iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:none}
     .loader{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,0.4);z-index:1}
     .loader span{width:30px;height:30px;border:4px solid var(--color-bg);border-top:4px solid transparent;border-radius:50%;animation:spin 1s linear infinite}
     @keyframes spin{to{transform:rotate(360deg)}}
-
-    .btn-icon{background:var(--color-secondary);color:white;padding:10px 12px;border:none;border-radius:10px;cursor:pointer;display:flex;align-items:center;transition:background .3s}
-    .btn-icon:active{transform: translateY(1px);background:var(--color-bg)}
-    .material-symbols-outlined{font-size:20px;display:inline-block}
 
     /* Images grid */
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(100px,1fr));gap:8px}
@@ -579,3 +575,8 @@ font-size: 32px;
   flex-direction: row;
   flex-shrink: 0;
 }
+   .btn-icon{background:var(--color-secondary);color:white;padding:10px 12px;border:none;border-radius:10px;cursor:pointer;display:flex;align-items:center;transition:background .3s}
+    .btn-icon:active{transform: translateY(1px);background:var(--color-bg)}
+    .material-symbols-outlined{font-size:20px;display:inline-block}
+
+ 
