--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ font-size: 32px;
 }
 
 .selector-display:hover {
-  background: ;/**/
+  background: ;
 }
 .selector-display:hover .live-badge {
     background: var(color-text);
@@ -506,7 +506,7 @@ font-size: 32px;
 
 .scroll-btn:hover {
   opacity: 1;
-  background:;/**/
+  background:;
 }
 
 /* --- Contenedor de las opciones --- */
