--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ height: auto;
       backdrop-filter: blur(4px);
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
     }
     .tabs .center img{height:40px}
     .tabs .center {
