--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-      --color-bg: #ff00aa;
-      --color-accent: lightseagreen;
+      --color-bg: slateblue;
+      --color-accent: mediumslateblue;
       --color-blur: rgba(0,0,0,.5);
     /**/
       --color-primary: #000;
