Actualizar style.css

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-      --color-bg: slateblue;
-      --color-accent: mediumslateblue;
+      --color-bg: magenta;
+      --color-accent: deepskyblue;
       --color-blur: rgba(0,0,0,.5);
     /**/
       --color-primary: #000;
