--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ height: auto;
 }
     main{
       flex:1;padding:1rem;display:flex;flex-direction:column;gap:1rem;
-      width:100%;max-width:1000px;margin:0 auto;
+      width:100%;margin:0 auto;
     }
 /*****IFRAME CHANNELS*****/
     .iframe-container{border: 2px solid var(--color-secondary);position:relative;width:100%;padding-top:56.25%;background:black;border-radius:12px;overflow:hidden}
@@ -240,14 +240,7 @@ footer{
         object-fit: contain;
     }
     
-    @media (max-width:480px){
-      .modal-close .material-symbols-outlined { font-size:26px; }
-      .modal-inner { padding:0; }
-      .modal-title { font-size:; }
-        .modal-media video, .modal-media iframe {
-        
-        }
-    }
+    
 
   @keyframes focusHighlight {
     0%, 100% { box-shadow: 0 0 0 0 yellow; }
